--- a/a2-comp2084/Web.config
+++ b/a2-comp2084/Web.config
@@ -13,7 +13,7 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="metadata=res://*/Models.comics.csdl|res://*/Models.comics.ssdl|res://*/Models.comics.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=comictracker;persist security info=True;user id=sa;password=dakides;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="metadata=res://*/Models.comics.csdl|res://*/Models.comics.ssdl|res://*/Models.comics.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=comictracker;persist security info=True;user id=sa;password=**********;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
